--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,8 @@
 <footer>
-    <a class="navbar-brand" href="{{ site.baseurl }}index.html" title="Home">{{ site.title }}</a>
+    <a class="navbar-brand" href="index.html" title="Home">{{ site.title }}</a>
     <p>Copyright &copy; {{ "now" | date: "%Y" }} {{ site.title }}. All rights reserved.</p>
 
     <nav id="footer-links">
-        <a href="{{ site.baseurl }}privacy-policy.html">Privacy Policy</a> |
-        <a href="{{ site.baseurl }}terms-of-use.html">Terms of Use</a> |
-        <a href="{{ site.baseurl }}sitemap.xml">Site Map</a>
+        <a href="sitemap.xml">Site Map</a>
     </nav>
 </footer>
