--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 	<title>{{ page.title }} | {{ site.title }}</title>
 	
 	
-	<link href="{{ site.baseurl }}static/img/favicon.png" rel="icon">
+	<link href="static/img/favicon.png" rel="icon">
 
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
@@ -22,7 +22,7 @@
 	      rel="stylesheet">
 	
 	<!-- Custom CSS -->
-	<link href="{{ site.baseurl }}static/css/styles.css" rel="stylesheet" type="text/css">
+	<link href="static/css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
@@ -44,6 +44,6 @@
 		crossorigin="anonymous"></script>
 
 	<!-- Custom scripts -->
-	<script src="{{ site.baseurl }}static/js/all-pages.js"></script>
+	<script src="static/js/all-pages.js"></script>
 </body>
 </html>
