--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,10 @@
 <footer>
     <a class="navbar-brand" href="index.html" title="Home">{{ site.title }}</a>
     
-    <p><a href="mailto:crosson.a.michael@gmail.com">Email</a></p>
-    <p><a href="https://github.com/MichaelCrosson" target="_blank">GitHub</a></p>
+    <p>
+    <a href="mailto:crosson.a.michael@gmail.com">Email</a> | 
+    <a href="https://github.com/MichaelCrosson" target="_blank">GitHub</a>
+    </p>
 
     <p>Copyright &copy; {{ "now" | date: "%Y" }} {{ site.title }}. All rights reserved.</p>
 </footer>
