--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,19 @@
     <a class="navbar-brand" href="index.html" title="Home">{{ site.title }}</a>
     
     <p>
-    <a href="mailto:crosson.a.michael@gmail.com">Email</a> | 
-    <a href="https://github.com/MichaelCrosson" target="_blank">GitHub</a>
+        <a href="#" onclick="copyToClipboard('crosson.a.michael@gmail.com')">Email</a> | 
+        <a href="https://github.com/MichaelCrosson" target="_blank">GitHub</a>
     </p>
 
     <p>Copyright &copy; {{ "now" | date: "%Y" }} {{ site.title }}. All rights reserved.</p>
 </footer>
+
+<script>
+function copyToClipboard(text) {
+    navigator.clipboard.writeText(text).then(function() {
+        alert('Email address copied to clipboard');
+    }, function(err) {
+        console.error('Error copying text: ', err);
+    });
+}
+</script>
