--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
 <script>
 function copyToClipboard(text) {
     navigator.clipboard.writeText(text).then(function() {
-        alert('Email address copied to clipboard');
+        alert('Email address copied to clipboard!');
     }, function(err) {
         console.error('Error copying text: ', err);
     });
