--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,8 @@
     
     <p>
         <a href="#" onclick="copyToClipboard('crosson.a.michael@gmail.com')">Email</a> | 
-        <a href="https://github.com/MichaelCrosson" target="_blank">GitHub</a>
+        <a href="https://github.com/MichaelCrosson" target="_blank">GitHub</a> | 
+        <a href="https://www.linkedin.com/in/michaelacrosson/" target="_blank">LinkedIn</a>
     </p>
 
     <p>Copyright &copy; {{ "now" | date: "%Y" }} {{ site.title }}. All rights reserved.</p>
